--- a/letter.html
+++ b/letter.html
@@ -18,7 +18,7 @@
             <span class="letter-line" data-text="No puedo creer que cumplamos 11 meses,"></span>
             <span class="letter-line" data-text="me parece realemente increíble ver todo lo que hemos logrado y creado juntas."></span>
             <span class="letter-line" data-text="Haciendo este pequeño proyecto (que espero que te guste),"></span>
-            <span class="letter-line" data-text="pude recordad con felicidad caricias, besos y momentos que marcaron mi vida. "></span>
+            <span class="letter-line" data-text="pude recordar con felicidad caricias, besos y momentos que marcaron mi vida. "></span>
             <span class="letter-line" data-text="Y aunque en la fiesta, algo de mi sabía que tu eres mi persona, jamás imaginé cuanto cambiarias mi vida."></span>
             <span class="letter-line" data-text="Porque de alguna forma, lograste abrir todos los espacios en mi que creí cerrados,"></span>
             <span class="letter-line" data-text="y aunque aún tenga defectos en los cuales trabajar, quiero trabajar en mi para darte lo mejor de mi."></span>
@@ -29,8 +29,8 @@
             <span class="letter-line" data-text="Perdoname si esto es muy poco, pero lo hice con todas las cosas ñoñas que se y con mucho mucho amor, pero prometo compensarlo."></span>
             <span class="letter-line" data-text="Y espero y manifiesto, seguir construyendo y minando cuevas, abriendo portales y puertas que dan miedo,"></span>
             <span class="letter-line" data-text=" modelando outfits rancios y matando zombies contigo durante la eternidad y para siempre."></span>
-            <span class="letter-line" data-text="Lo eres todo para mi, Caro. Eres mi eternidad. Gracias por el casi mejor año de mi vida."></span>
-            <span class="letter-line" data-text="Te amo."></span>
+            <span class="letter-line" data-text="Lo eres todo para mi, Caro. Eres mi eternidad. Gracias por el mejor casi año de mi vida."></span>
+            <span class="letter-line" data-text="Te amo más de lo que jamás voy a poder expresar."></span>
             <span class="letter-line" data-text="Tu chiquilla Kami.."></span>
         </div>
         <span id="finalCursor" class="typing-cursor"></span> 
@@ -40,4 +40,5 @@
 
     <script src="Script/letter.js"></script>
 </body>
+
 </html>
