--- a/moment.html
+++ b/moment.html
@@ -66,6 +66,12 @@
             <p>July 2025</p>
         </div>
 
+        
+        <div class="gallery-item">
+            <img src="imgs1/Aug.JPEG" alt="Momento 11" class="clickable-photo" data-message="Razón 11: Por lo extremadamente hermosa que eres, todos los días a todas horas.">
+            <p>July 2025</p>
+        </div>
+
         <div class="gallery-item">
             <img src="https://img.freepik.com/premium-vector/pixel-art-illustration-padlock-pixelated-padlock-secure-padlock-pixelated-pixel-art-game_1038602-1191.jpg" alt="Momento 12" class="clickable-photo" data-message="BLOQUEADO! se desbloqueara una vez hayamos cumplido el año. Sigamos construyendo vida por siempre.   TE AMOOOO">
             <p>September 2025</p>
@@ -82,4 +88,5 @@
 
     <script src="Script/memories.js"></script> 
 </body>
+
 </html>
