--- a/moment.html
+++ b/moment.html
@@ -68,8 +68,8 @@
 
         
         <div class="gallery-item">
-            <img src="imgs1/Aug.JPEG" alt="Momento 11" class="clickable-photo" data-message="Razón 11: Por lo extremadamente hermosa que eres, todos los días a todas horas.">
-            <p>July 2025</p>
+            <img src="imgs1/Aug.JPEG" alt="Momento 12" class="clickable-photo" data-message="Razón 12: Porque aunque no es tu zona de confort, eres mi complice en todo y me acompañas en todas mis locuras.">
+            <p>August 2025</p>
         </div>
 
         <div class="gallery-item">
@@ -90,3 +90,4 @@
 </body>
 
 </html>
+
