--- a/moment.html
+++ b/moment.html
@@ -52,12 +52,12 @@
         </div>
 
         <div class="gallery-item">
-            <img src="imgs1/May.jpg" alt="Momento 9" class="clickable-photo" data-message="Razón 9: Por pedorra">
+            <img src="imgs1/May.jpg" alt="Momento 9" class="clickable-photo" data-message="Razón 9: Por pedorra y por ser el amor de mi vida.">
             <p>May 2025</p>
         </div>
 
         <div class="gallery-item">
-            <img src="imgs1/Jun.jpg" alt="Momento 10" class="clickable-photo" data-message="Razón 10: Por No irte e inspirarme a ser mejor persona">
+            <img src="imgs1/Jun.jpg" alt="Momento 10" class="clickable-photo" data-message="Razón 10: Por No irte e inspirarme a ser mejor persona ">
             <p>June 2025</p>
         </div>
 
@@ -90,4 +90,5 @@
 </body>
 
 </html>
+
 
