--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body class="index-page">
     <div class="intro-container">
-        <h1 class="game-title">Happy 11 month anniversary!!!</h1>
+        <h1 class="game-title">Happy 11 month anniversary!</h1>
         <button id="playButton" class="play-button">Play</button>
         <div id="heartAnimation" class="heart-animation"></div>
     </div>
@@ -21,4 +21,5 @@
 
     <script src="Script/Script.js"></script>
 </body>
+
 </html>
