--- a/time.html
+++ b/time.html
@@ -11,10 +11,7 @@
     <h1 class="content-title">How Long We've Been Together?</h1>
     <div class="countdown-container">
         <div class="round-frame">
-            <img src="https://via.placeholder.com/300x300/6A5ACD/FFFFFF?text=Nuestra+Foto" alt="Nuestra Foto">
-        </div>
-        <div class="round-text-container">
-            <p>Desde el día que nuestras vidas se unieron:</p>
+            <p>Desde el día que estamos juntitas:</p>
             <div id="countdownDisplay">
                 <span id="months"></span>
                 <span id="days"></span>
@@ -28,4 +25,5 @@
 
     <script src="Script/time.js"></script>
 </body>
+
 </html>
