--- a/time.html
+++ b/time.html
@@ -9,11 +9,9 @@
 </head>
 <body class="content-page">
     <h1 class="content-title">How Long We've Been Together?</h1>
-
-    <p>Desde el día que estamos juntitas:</p>
-   
     <div class="countdown-container">
-            
+        <div class="round-text-container">
+            <p>Días desde que estamos juntitas:</p>
             <div id="countdownDisplay">
                 <span id="months"></span>
                 <span id="days"></span>
@@ -27,6 +25,4 @@
 
     <script src="Script/time.js"></script>
 </body>
-
 </html>
-
