--- a/playlist.html
+++ b/playlist.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Kalam:wght@400;700&display=swap" rel="stylesheet">
 </head>
+    <body class="content-page">
     <audio id="playlistMusic" src="audio/playlist_music.mp3" loop></audio>
 
     <h1 class="content-title">Sound track!</h1>
@@ -98,3 +99,4 @@
 </body>
 
 </html>
+
