--- a/playlist.html
+++ b/playlist.html
@@ -10,7 +10,7 @@
     <body class="content-page">
     <audio id="playlistMusic" src="audio/playlist_music.mp3" loop></audio>
 
-    <h1 class="content-title">Sound track!</h1>
+    <h1 class="content-title">Sound - track!</h1>
 
     <div class="carousel-container">
         <button id="prevBtn" class="carousel-btn prev-btn"></button>
@@ -99,6 +99,7 @@
 </body>
 
 </html>
+
 
 
 
