--- a/moment.html
+++ b/moment.html
@@ -17,7 +17,7 @@
         </div>
 
         <div class="gallery-item">
-            <img src="imgs1/oct.jpg" alt="Momento 2" class="clickable-photo" data-message="Razón 2: Que siempre estás para los demás y tu empatía">
+            <img src="imgs1/oct.jpg" alt="Momento 2" class="clickable-photo" data-message="Razón 2: Que seas tan humana y sientas tanto.">
             <p>October 2024</p>
         </div>
 
@@ -90,5 +90,6 @@
 </body>
 
 </html>
+
 
 
