--- a/moment.html
+++ b/moment.html
@@ -73,8 +73,18 @@
         </div>
 
         <div class="gallery-item">
-            <img src="https://img.freepik.com/premium-vector/pixel-art-illustration-padlock-pixelated-padlock-secure-padlock-pixelated-pixel-art-game_1038602-1191.jpg" alt="Momento 12" class="clickable-photo" data-message="BLOQUEADO! se desbloqueara una vez hayamos cumplido el año. Sigamos construyendo vida por siempre.   TE AMOOOO">
+            <img src="imgs1/sep1.jpg" alt="Momento 13" class="clickable-photo" data-message="FELICIDADES! Haz desbloqueado un año juntas! Gracias por permanecer a mi lado y acompañarme siempre, jamás medirás el amor tan grande que tengo por ti, y este año fue nuestro primero, el primero de toda una vida junto a ti. Te adoro mi changuita.">
             <p>September 2025</p>
+        </div>
+
+         <div class="gallery-item">
+            <img src="imgs1/Oct2.jpg" alt="Momento 14" class="clickable-photo" data-message="Razón 13: Por que decides quedarte a pesar de yo ser alguien dificil.">
+            <p>October 2025</p>
+        </div>
+
+         <div class="gallery-item">
+            <img src="imgs1/Nov3.jpg" alt="Momento 15" class="clickable-photo" data-message="Razón 14: Por ser quien me impulsa a crecer, gracias por elegirme.">
+            <p>November 2025</p>
         </div>
         
     </div>
